--- a/index.html
+++ b/index.html
@@ -9,158 +9,161 @@
 </head>
 
 <body>
+    <section class="min-vh-100">
+        <div class="container">
+          <h3 class="heading-style">Do more with Startup Framework</h3>
+            <div class=" overflow">
+                <table class="w-100">
+                    <tr>
+                        <th class="h-140 border-0 bg-grey border-top-left-0"></th>
+                        <th class="bg-grey border-top-0"><span class="plan-style  ">Basic Plan</span><br>
+                            <p class="sub-head-style">All the basic for starting a<br> new business</p>
+                        </th>
+                        <th class="bg-grey border-top-0"><span class="plan-style ">Pro Plan</span><br>
+                            <p class="sub-head-style">Everything you need for a<br> growing business</p>
+                        </th>
+                        <th class="bg-grey border-top-right-0">
+                            <span class="plan-style ">Company Plan</span><br>
+                            <p class="sub-head-style">Perfect for companies,<br> agencies & teams</p>
+                        </th>
+                    </tr>
 
-    <h3 class="heading-style">Do more with Startup Framework</h3>
-    <div class="d-flex">
-        <table>
-            <tr>
-                <th class="h-140 border-0 bg-grey border-top-left-0"></th>
-                <th class="bg-grey border-top-0"><span class="plan-style  ">Basic Plan</span><br>
-                    <p class="sub-head-style">All the basic for starting a<br> new business</p>
-                </th>
-                <th class="bg-grey border-top-0"><span class="plan-style ">Pro Plan</span><br>
-                    <p class="sub-head-style">Everything you need for a<br> growing business</p>
-                </th>
-                <th class="bg-grey border-top-right-0">
-                    <span class="plan-style ">Company Plan</span><br>
-                    <p class="sub-head-style">Perfect for companies,<br> agencies & teams</p>
-                </th>
-            </tr>
+                    <tr>
+                        <td class="head-grey pr-10 h-150  ">Price</td>
+                        <td>
+                            <p class="number">19
+                                <span class="dollar-icon">$</span>
+                            </p>
+                        </td>
+                        <td>
+                            <p class="number">49
+                                <span class="dollar-icon">$</span>
+                            </p>
 
-            <tr>
-                <td class="head-grey pr-10 h-150">Price</td>
-                <td>
-                    <p class="number">19
-                        <span class="dollar-icon">$</span>
-                    </p>
-                </td>
-                <td>
-                    <p class="number">49
-                        <span class="dollar-icon">$</span>
-                    </p>
+                        </td>
+                        <td>
+                            <p class="number">99
+                                <span class="dollar-icon">$</span>
+                            </p>
 
-                </td>
-                <td>
-                    <p class="number">99
-                        <span class="dollar-icon">$</span>
-                    </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="head-grey pr-10 white-nowrap">Hosted Projects</td>
+                        <td class="data">Unlimited</td>
+                        <td class="data">Unlimited</td>
+                        <td class="data">Unlimited</td>
+                    </tr>
+                    <tr>
+                        <td class="head-grey pr-10 white-nowrap">UnHosted Projects</td>
+                        <td class="data">2</td>
+                        <td class="data">10</td>
+                        <td class="data">Unlimited</td>
+                    </tr>
+                    <tr>
+                        <td class="head-grey pr-10 white-nowrap">Billing</td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="grey-checked"></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="green-checked">
+                                    <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
 
-                </td>
-            </tr>
-            <tr>
-                <td class="head-grey pr-10">Hosted Projects</td>
-                <td class="data">Unlimited</td>
-                <td class="data">Unlimited</td>
-                <td class="data">Unlimited</td>
-            </tr>
-            <tr>
-                <td class="head-grey pr-10">UnHosted Projects</td>
-                <td class="data">2</td>
-                <td class="data">10</td>
-                <td class="data">Unlimited</td>
-            </tr>
-            <tr>
-                <td class="head-grey pr-10">Billing</td>
-                <td>
-                    <div class="d-flex">
-                        <div class="grey-checked"></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex">
-                        <div class="green-checked">
-                            <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="green-checked">
+                                    <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
 
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex">
-                        <div class="green-checked">
-                            <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="head-grey pr-10 white-nowrap">Support</td>
+                        <td class="data">Forum</td>
+                        <td class="data">Chat</td>
+                        <td class="data">Phone Call</td>
+                    </tr>
+                    <tr>
+                        <td class="head-grey pr-10 white-nowrap">Custom Domen</td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="grey-checked "></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="grey-checked"></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="green-checked">
+                                    <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
 
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="head-grey pr-10">Support</td>
-                <td class="data">Forum</td>
-                <td class="data">Chat</td>
-                <td class="data">Phone Call</td>
-            </tr>
-            <tr>
-                <td class="head-grey pr-10">Custom Domen</td>
-                <td>
-                    <div class="d-flex">
-                        <div class="grey-checked "></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex">
-                        <div class="grey-checked"></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex">
-                        <div class="green-checked">
-                            <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="head-grey pr-10 white-nowrap">Dashboard</td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="grey-checked"></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="grey-checked"></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex">
+                                <div class="green-checked">
+                                    <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
 
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="head-grey pr-10">Dashboard</td>
-                <td>
-                    <div class="d-flex">
-                        <div class="grey-checked"></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex">
-                        <div class="grey-checked"></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex">
-                        <div class="green-checked">
-                            <svg width="10" height="8" viewBox="0 0 10 8" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 3.875L3.64706 6.375L9 1.375" stroke="#1E0E62" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="h-120"> </td>
-                <td>
-                    <div class="d-flex"><button class="button-style">Get Started for Free</button></div>
-                </td>
-                <td>
-                    <div class="d-flex"><button class="button-style">Get Started for Free</button></div>
-                </td>
-                <td>
-                    <div class="d-flex"><button class="button-style">Get Started for Free</button></div>
-                </td>
-            </tr>
-        </table>
-    </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="h-120"> </td>
+                        <td>
+                            <div class="d-flex"><button class="button-style">Get Started for Free</button></div>
+                        </td>
+                        <td>
+                            <div class="d-flex"><button class="button-style">Get Started for Free</button></div>
+                        </td>
+                        <td>
+                            <div class="d-flex"><button class="button-style">Get Started for Free</button></div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
 
 </body>
 
